--- a/chatApp/FrontEnd/index.html
+++ b/chatApp/FrontEnd/index.html
@@ -19,13 +19,14 @@
     <script src="controller/registerControl.js"  ></script>
     <script src="controller/forgetControl.js"  ></script>  
     <script src="controller/createNewcontrol.js"  ></script>
-
+    <script src ="controller/chatControl.js"></script>
 
 
     <script src="services/loginServices.js"></script>
     <script src="services/registerServices.js"  ></script>
     <script src="services/forgetServices.js"  ></script>
     <script src="services/newpassServices.js"  ></script>
+    <script src ="services/chatService.js"></script>
 </head>
 
 <body>
