--- a/chatApp/FrontEnd/index.html
+++ b/chatApp/FrontEnd/index.html
@@ -27,7 +27,7 @@
     <script src="services/newpassServices.js"  ></script>
     <script src ="services/chatService.js"></script>
     
-    <script>
+    <script></script>
         var socket= io()
    </script>
 </head>
